[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 1023.0
margin_bottom = 594.0
script = ExtResource( 1 )

[node name="ColorRect_4" type="ColorRect" parent="."]
margin_left = 535.0
margin_top = 292.0
margin_right = 868.0
margin_bottom = 363.0
color = Color( 0, 0, 0, 0.270588 )

[node name="Button4" type="Button" parent="ColorRect_4"]
margin_left = 21.0
margin_top = 96.0
margin_right = 158.0
margin_bottom = 136.0
text = "Clique aqui para ver o valor"

[node name="Label" type="Label" parent="ColorRect_4/Button4"]
margin_left = -18.0
margin_top = -82.0
margin_right = 299.0
margin_bottom = -34.0
align = 1

[node name="LineEdit" type="LineEdit" parent="ColorRect_4/Button4"]
margin_left = -11.0
margin_top = -171.0
margin_right = 289.0
margin_bottom = -113.0
align = 1

[node name="Label" type="Label" parent="ColorRect_4"]
margin_left = 18.0
margin_top = -72.0
margin_right = 158.0
margin_bottom = -51.0
text = "escreva um valor aqui"

[node name="ColorRect2_3" type="ColorRect" parent="."]
margin_left = 536.0
margin_top = 50.0
margin_right = 855.0
margin_bottom = 125.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_group_": true
}

[node name="Button3" type="Button" parent="ColorRect2_3"]
margin_left = 26.0
margin_top = 95.0
margin_right = 163.0
margin_bottom = 135.0
text = "Clique aqui para ver o texto"

[node name="Label" type="Label" parent="ColorRect2_3/Button3"]
margin_left = 6.0
margin_top = -88.0
margin_right = 257.0
margin_bottom = -35.0
align = 1

[node name="ColorRect_2" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 293.0
margin_right = 373.0
margin_bottom = 366.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Button2" type="Button" parent="ColorRect_2"]
margin_left = 33.0
margin_top = 92.0
margin_right = 174.0
margin_bottom = 129.0
text = "Clique aqui para ver sua lista "

[node name="Label" type="Label" parent="ColorRect_2/Button2"]
margin_left = -10.0
margin_top = -84.0
margin_right = 264.0
margin_bottom = -27.0
align = 1

[node name="LineEdit" type="LineEdit" parent="ColorRect_2/Button2"]
margin_left = -19.0
margin_top = -167.0
margin_right = 276.0
margin_bottom = -103.0
align = 1

[node name="Label" type="Label" parent="ColorRect_2"]
margin_left = 18.0
margin_top = -69.0
margin_right = 175.0
margin_bottom = -38.0
text = "escreva sua lista aqui"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 53.0
margin_top = 45.0
margin_right = 368.0
margin_bottom = 122.0
color = Color( 0, 0, 0, 0.301961 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 30.0
margin_top = 95.0
margin_right = 169.0
margin_bottom = 132.0
text = "Clique aqui para ver a lista"

[node name="Label" type="Label" parent="ColorRect/Button"]
margin_left = -16.0
margin_top = -85.0
margin_right = 274.0
margin_bottom = -28.0
align = 1

[connection signal="pressed" from="ColorRect_4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ColorRect2_3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect_2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
